<resources>
    <string name="app_name">E-Ticaret</string>
    <string name="sales_icon">Sales</string>
    <string name="contacts_text">Contact</string>
    <string name="about_text">About</string>
    <string name="main_text">Main</string>
    <string name="logo_of_app_1">Courses</string>
    <string name="logo_of_app_2">App</string>
    <string name="course_start_date">Sart Date :</string>
    <string name="course_level">Level :</string>
    <string name="course_description">Программа обучения Джава – рассчитана на новичков в данной сфере. За программу вы изучите построение графических приложений под ПК,
разработку веб сайтов на основе Java
Spring Boot, изучите построение
полноценных Андроид приложений
и отлично изучите сам язык Джава!</string>
</resources>